2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (gnome_selector_get_uri): Removed.
	(gnome_selector_set_uri): Removed.

	* gnome-selector.c (impl_GNOME_Selector_getClientID): Implemented.
	(impl_GNOME_Selector_getURI, impl_GNOME_Selector_setURI): Likewise.

2001-05-07  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (GnomeSelectorClass): Removed "do_construct".
	(gnome_selector_do_construct): Removed.
	(gnome_selector_construct): New function.
	(gnome_selector_bind_to_control): Made 2nd argument a BonoboObject.

2001-05-06  Martin Baulig  <baulig@suse.de>

	* gnome-preferences.c: Use the new bonobo-property-bag-client API.

2001-05-03  Martin Baulig  <baulig@suse.de>

	* gnome-file-selector.[ch]: Moved here from libgnomeui.
	(GnomeFileSelector): Derive this directly from GnomeSelector.

2001-05-02  Michael Meeks  <michael@ximian.com>

	* libgnome-init.c (libbonobo_class_init): kill BonoboObjectClietn.
	(gnome_program_get_config_database): split out (get_db): into here
	never cut and paste code.
	(gnome_program_get_config_database),
	(gnome_program_get_desktop_config_database): upd.
	re-order to remove redundant prototypes.

2001-05-01  Michael Meeks  <michael@ximian.com>

	* Makefile.am: fixup corba dependencies more genericaly, add
	cleanfiles.

2001-05-02  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Added explicit dependency
	`libgnometypebuiltins.h libgnometypebuiltins.c: $(CORBA_SOURCE)'.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* gnome-preferences.h (GNOME_PAD, GNOME_PAD_SMALL, GNOME_PAD_BIG):
	Moved these #defines here from gnome-uidefs.h.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (gnome_selector_get_entry_text): Removed.
	(gnome_selector_set_entry_text): Removed.
	(gnome_selector_activate_entry): Removed.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (gnome_selector_bind_to_control): New function.

2001-04-30  Martin Baulig  <baulig@suse.de>
