@@ -1,3 +1,12 @@
+2001-04-30  Martin Baulig  <baulig@suse.de>
+
+	* Makefile.am: Install gnome-selectorP.h.
+
+	* gnome-selector.h (gnome_selector_get_entry_text): Put this back.
+	(gnome_selector_set_entry_text): Likewise.
+	(gnome_selector_activate_entry): Likesise.
+	(gnome_selector_get_uri, gnome_selector_set_uri): Likewise.
+
 2001-05-08  Martin Baulig  <baulig@suse.de>
 
 	* gnome-selector.h (gnome_selector_get_uri): Removed.
